--- a/package.json
+++ b/package.json
@@ -1,27 +1,18 @@
 {
   "name": "nakomoto-coefficient",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0xlarry/nakomoto-coefficient.git"
-  },
   "author": "larry_0x <https://twitter.com/larry0x>",
   "license": "UNLICENSED",
-  "bugs": {
-    "url": "https://github.com/0xlarry/nakomoto-coefficient/issues"
+  "scripts": {
+    "build": "parcel build index.html",
+    "start": "parcel serve index.html"
   },
-  "homepage": "https://github.com/0xlarry/nakomoto-coefficient#readme",
   "dependencies": {
     "axios": "^0.21.1",
     "bn.js": "^5.2.0"
   },
   "devDependencies": {
     "@types/bn.js": "^5.1.0",
+    "parcel": "^2.0.0-rc.0",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   }
